# On_boarding

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploytoAksCluster-1.yml  deploytoAksCluster.yml  master_aaron-onboarding.yml
app/: Model.py  __init__.py  apidocs_utils.py  config.py  prac_apispec.py  practice_secret.py  secret_config.py
app/board/: boardModel.py  boardSchema.py  boardView.py
app/comment/: comentView.py  commentModel.py  commentSchema.py  commentView.py
app/models/: Model.py  auth.py  board.py  comment.py  models.py  post.py  recomment.py  user.py
app/post/: postModel.py  postSchema.py  postView.py
app/serializers/: board.py  boardSchema.py  comment.py  commentSchema.py  oauth.py  post.py  postSchema.py  recomments.py  user.py  userSchema.py
app/service/: auth.py  comment.py  commentService.py  mypage.py  post.py  postService.py  recomment.py  user.py  userService.py  validator.py
app/user/: userModel.py  userSchema.py  userView.py
app/utils/: ApiErrorSchema.py  ErrorHandler.py  enumOrder.py  validator.py  viewhandler.py
app/view/: board.py  boardView.py  comment.py  commentView.py  mypage.py  oatuh.py  post.py  postView.py  recomment.py  user.py  userView.py  viewhandler.py
manifests/: deployment-1.yml  deployment-2.yml  deployment.yml  service-1.yml  service-2.yml  service.yml
tests/: conftest.py  prac.py
tests/factories/: board.py  comment.py  post.py  posts.py  recomment.py  user.py
tests/views/: conftest.py  test_board.py  test_mypage.py  test_post.py  test_user.py  tset_mainpage.py
(+9 files in other folders)
